<resources>
    <string name="app_name" translatable="false">MusiCafe</string>
    <string name="app_subtitle">Music Theory Powered by Java</string>
    <string name="desc_image_logo">White mug with music note</string>

    <!-- MENU -->
    <string name="btn_ear_training">Ear Training</string>
    <string name="btn_staff_training">Staff Training</string>
    <string name="btn_glossary">Glossary</string>

    <string name="menu_exercises">Exercises</string>
    <string name="menu_library">Library</string>
    <string name="menu_play">Play</string>
    <string name="menu_settings">Settings</string>

    <!-- QUIZ ACTIVITIES -->
    <string name="btn_play">Play</string>
    <string name="btn_skip">Skip</string>
    <string name="btn_next">Next</string>
    <string name="txt_score" formatted="true" translatable="false">%1$d/%2$d</string> <!-- d/d -->

    <!-- INTERVALS -->
    <!-- Quality -->
    <string name="btn_augmented">Augmented</string>
    <string name="btn_diminished">Diminished</string>
    <string name="btn_major">Major</string>
    <string name="btn_minor">Minor</string>
    <string name="btn_perfect">Perfect</string>
    <!-- Size -->
    <string name="btn_unison">Unison</string>
    <string name="btn_second">Second</string>
    <string name="btn_third">Third</string>
    <string name="btn_fourth">Fourth</string>
    <string name="btn_fifth">Fifth</string>
    <string name="btn_sixth">Sixth</string>
    <string name="btn_seventh">Seventh</string>
    <string name="btn_octave">Octave</string>

    <!-- NOTES -->
    <string name="btn_c" translatable="false">C</string>
    <string name="btn_d" translatable="false">D</string>
    <string name="btn_e" translatable="false">E</string>
    <string name="btn_f" translatable="false">F</string>
    <string name="btn_g" translatable="false">G</string>
    <string name="btn_a" translatable="false">A</string>
    <string name="btn_b" translatable="false">B</string>
    <!-- Sharps/Flats -->
    <string name="btn_c_sharp" translatable="false">C♯/D♭</string>
    <string name="btn_d_sharp" translatable="false">D♯/E♭</string>
    <string name="btn_f_sharp" translatable="false">F♯/G♭</string>
    <string name="btn_g_sharp" translatable="false">G♯/A♭</string>
    <string name="btn_a_sharp" translatable="false">A♯/B♭</string>

</resources>
