<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:orientation="vertical"
    tools:context=".fragment.IntervalEarFragment">

    <!-- PianoFragment -->
    <fragment
        android:id="@+id/piano_fragment"
        android:name="kking.musicafe.fragment.PianoFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp" />

    <!-- "Play" Button -->
    <!-- onClick: IntervalEarFragment#playInterval -->
    <ImageButton
        android:id="@+id/playImageButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/colorButton"
        android:contentDescription="@string/btn_play"
        app:srcCompat="@android:drawable/ic_media_play" />

    <!-- Horizontal LinearLayout w/ "Major", "Perfect", "Minor" buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/majorButton"
            style="@style/QuizButtonStyle"
            android:text="@string/btn_major" />

        <Button
            android:id="@+id/perfectButton"
            style="@style/QuizButtonStyle"
            android:text="@string/btn_perfect" />

        <Button
            android:id="@+id/minorButton"
            style="@style/QuizButtonStyle"
            android:text="@string/btn_minor" />
    </LinearLayout>

    <!-- Horizontal LinearLayout w/ "Augmented", "Diminished" buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/augmentedButton"
            style="@style/QuizButtonStyle"
            android:text="@string/btn_augmented" />

        <Button
            android:id="@+id/diminishedButton"
            style="@style/QuizButtonStyle"
            android:text="@string/btn_diminished" />
    </LinearLayout>

    <!-- Horizontal LinearLayout w/ "Unison", "Second", "Third", "Fourth" buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/unisonButton"
            style="@style/QuizButtonStyle"
            android:text="@string/btn_unison" />

        <Button
            android:id="@+id/secondButton"
            style="@style/QuizButtonStyle"
            android:text="@string/btn_second" />

        <Button
            android:id="@+id/thirdButton"
            style="@style/QuizButtonStyle"
            android:text="@string/btn_third" />

        <Button
            android:id="@+id/fourthButton"
            style="@style/QuizButtonStyle"
            android:text="@string/btn_fourth" />
    </LinearLayout>

    <!-- Horizontal LinearLayout w/ "Fifth", "Sixth", "Seventh", "Octave" buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/fifthButton"
            style="@style/QuizButtonStyle"
            android:text="@string/btn_fifth" />

        <Button
            android:id="@+id/sixthButton"
            style="@style/QuizButtonStyle"
            android:text="@string/btn_sixth" />

        <Button
            android:id="@+id/seventhButton"
            style="@style/QuizButtonStyle"
            android:text="@string/btn_seventh" />

        <Button
            android:id="@+id/octaveButton"
            style="@style/QuizButtonStyle"
            android:text="@string/btn_octave" />
    </LinearLayout>

    <!-- Divider -->
    <View
        style="@style/Divider"
        android:layout_marginTop="16dp" />

    <!-- Score and "Next" Button -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/scoreTextView"
            style="@style/TextWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/txt_score" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <!-- onClick: IntervalEarFragment#resetInterval -->
        <Button
            android:id="@+id/nextButton"
            style="@style/QuizButtonStyle"
            android:text="@string/btn_next" />

    </LinearLayout>

</LinearLayout>
